--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,12 @@ section {
 section h1,
 section p {
 	text-align: center;
-	color: #454545;
+	color: mediumvioletred;
 }
 section h1 {
-	font: 32px 'Open Sans';
+	font: 32px 'Georgia';
 	font-weight: bold;
 }
 section p {
-	font: 16px 'Open Sans';
+	font: 16px 'Courier';
 }
